--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
     <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
 	<!-- JQuery -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
@@ -17,7 +19,7 @@
 	 MathJax.Hub.Config({ tex2jax: { inlineMath: [['$','$'], ["\\(","\\)"]] } });
 	</script>
 	<script type="text/javascript"
-		src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_CHTML">
+		      src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS_CHTML">
 	</script>
 	<meta http-equiv="X-UA-Compatible" CONTENT="IE=EmulateIE7" />
     </head>
