座標平面クラスを作成

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </head>
     <body>
 	<script src="selfgaf.js"></script>
+	<script src="graph.js"></script>
 	<script src="expression.c.js"></script>
 	<div class="container">
 	    <div class="row">
