--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     </head>
     <body>
 	<script src="selfgaf.js"></script>
+	<script src="require.c.js"></script>
 	<script src="graph.js"></script>
-	<script src="expression.c.js"></script>
+	<script src="expression.js"></script>
 	<div class="container">
 	    <div class="row">
 		<div class="col-sm-12">
