[add hack] とりあえずPixi Applicationを表示

--- a/index.html
+++ b/index.html
@@ -54,12 +54,15 @@
 			<div id="visual-expr"></div>
 			<div id="visual-base-expr"></div>
 		    </div>
-		    <div class="col-sm-6">
-			<h3>■ GRAPH</h3>
+		    <div id="graph-wrapper" class="col-sm-6">
+			<h3>■ GRAPH
+			    (<input type='checkbox' id='fullscreen'>FullScreen)
+			</h3>
 			<div id="graph" class="col-sm-6">
 			    <gaf id="drawing"></gaf>
 			</div>
-			<input type='checkbox' id='fullscreen'>FullScreen
+			
+			
 		    </div>
 		</div>
 		<div class="row">
